--- a/Watchlist.html
+++ b/Watchlist.html
@@ -36,8 +36,7 @@
         <div class="menu">
           <div class="logo-toggle">
             <span class="logo"
-              ><a href="#">
-                <img src="./images/Logo/Logo.png" heightuniv="30" /> </a
+              ><a href="#"> <img src="./images/Logo/Logo.png" height="30" /> </a
             ></span>
             <i class="bx bx-x siderbarClose"></i>
           </div>
